tf/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.17"
    }
  }
}

provider "aws" {
  profile = "prod"
  region  = "ca-central-1"
}

# ecs

resource "aws_ecs_cluster" "testnet_voteaire_cluster" {
  name = "testnet-voteaire-cluster"
}

resource "aws_ecs_task_definition" "task_definitions" {
  for_each = {
    api = {
      memory = "512",
      cpu    = "256"
    },
    chain-worker = {
      memory = "512",
      cpu    = "256"
    },
    weight-worker = {
      memory = "512",
      cpu    = "256"
    },
  }
  family                   = "testnet-voteaire-${each.key}"
  container_definitions    = file("container-definitions/container-definition-${each.key}.json")
  memory                   = each.value.memory
  cpu                      = each.value.cpu
  execution_role_arn       = "arn:aws:iam::044223142297:role/ecsTaskExecutionRole"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
}

resource "aws_ecs_service" "workers" {
  for_each            = toset(["chain-worker", "weight-worker"])
  name                = "testnet-voteaire-${each.key}"
  cluster             = aws_ecs_cluster.testnet_voteaire_cluster.id
  task_definition     = aws_ecs_task_definition.task_definitions[each.key].arn
  desired_count       = 1
  launch_type         = "FARGATE"
  scheduling_strategy = "REPLICA"


  deployment_controller {
    type = "ECS"
  }

  network_configuration {
    assign_public_ip = "true"
    security_groups  = [aws_security_group.worker_sg.id]
    subnets          = [aws_subnet.public-b.id, aws_subnet.public-a.id]
  }
}

# voteaire api config

resource "aws_codedeploy_app" "testnet_voteaire_api_codedeploy" {
  compute_platform = "ECS"
  name             = "testnet-voteaire-api"
}

resource "aws_iam_role" "codedeploy_role" {
  name = "codedeploy-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "",
      "Effect": "Allow",
      "Principal": {
        "Service": "codedeploy.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
EOF

  inline_policy {
    name = "AWSCodeDeployRoleForECS"
    policy = jsonencode({
      "Version" : "2012-10-17",
      "Statement" : [
        {
          "Action" : [
            "ecs:DescribeServices",
            "ecs:CreateTaskSet",
            "ecs:UpdateServicePrimaryTaskSet",
            "ecs:DeleteTaskSet",
            "elasticloadbalancing:DescribeTargetGroups",
            "elasticloadbalancing:DescribeListeners",
            "elasticloadbalancing:ModifyListener",
            "elasticloadbalancing:DescribeRules",
            "elasticloadbalancing:ModifyRule",
            "lambda:InvokeFunction",
            "cloudwatch:DescribeAlarms",
            "sns:Publish",
            "s3:GetObject",
            "s3:GetObjectVersion"
          ],
          "Resource" : "*",
          "Effect" : "Allow"
        },
        {
          "Action" : [
            "iam:PassRole"
          ],
          "Effect" : "Allow",
          "Resource" : "*",
          "Condition" : {
            "StringLike" : {
              "iam:PassedToService" : [
                "ecs-tasks.amazonaws.com"
              ]
            }
          }
        }
      ]
    })
  }
}


resource "aws_codedeploy_deployment_group" "codedeploy_group" {
  app_name               = aws_codedeploy_app.testnet_voteaire_api_codedeploy.name
  deployment_config_name = "CodeDeployDefault.ECSAllAtOnce"
  deployment_group_name  = "testnet-voteaire"
  service_role_arn       = aws_iam_role.codedeploy_role.arn

  auto_rollback_configuration {
    enabled = true
    events  = ["DEPLOYMENT_FAILURE"]
  }

  blue_green_deployment_config {
    deployment_ready_option {
      action_on_timeout = "CONTINUE_DEPLOYMENT"
    }

    terminate_blue_instances_on_deployment_success {
      action                           = "TERMINATE"
      termination_wait_time_in_minutes = 60
    }
  }

  deployment_style {
    deployment_option = "WITH_TRAFFIC_CONTROL"
    deployment_type   = "BLUE_GREEN"
  }

  ecs_service {
    cluster_name = aws_ecs_cluster.testnet_voteaire_cluster.name
    service_name = aws_ecs_service.testnet_voteaire_api.name
  }

  load_balancer_info {
    target_group_pair_info {
      prod_traffic_route {
        listener_arns = [aws_lb_listener.voteaire_lb_listener.arn]
      }

      target_group {
        name = aws_lb_target_group.testnet_voteaire_api_tg_2.name
      }

      target_group {
        name = aws_lb_target_group.testnet_voteaire_api_tg_1.name
      }
    }
  }
}


resource "aws_ecs_service" "testnet_voteaire_api" {
  name            = "testnet-voteaire-api"
  cluster         = aws_ecs_cluster.testnet_voteaire_cluster.id
  task_definition = aws_ecs_task_definition.task_definitions["api"].arn
  desired_count   = 1
  launch_type     = "FARGATE"

  deployment_controller {
    type = "CODE_DEPLOY"
  }

  load_balancer {
    container_name   = "api"
    container_port   = 80
    target_group_arn = aws_lb_target_group.testnet_voteaire_api_tg_2.arn
  }

  network_configuration {
    assign_public_ip = true
    security_groups  = [aws_security_group.voteaire_api_ecs_sg.id]
    subnets          = [aws_subnet.public-a.id]
  }

}
